--- a/arch/arm64/configs/kali_defconfig
+++ b/arch/arm64/configs/kali_defconfig
@@ -48,7 +48,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-NetHunter"
+CONFIG_LOCALVERSION="-NetHunter-r5"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="kali"
 CONFIG_SWAP=y
