--- a/arch/arm64/configs/kali_defconfig
+++ b/arch/arm64/configs/kali_defconfig
@@ -288,10 +288,7 @@ CONFIG_ARCH_SUPPORTS_THINLTO=y
 CONFIG_THINLTO=y
 # CONFIG_LTO_NONE is not set
 CONFIG_LTO_CLANG=y
-CONFIG_CFI=y
-# CONFIG_CFI_PERMISSIVE is not set
-CONFIG_CFI_CLANG=y
-CONFIG_CFI_CLANG_SHADOW=y
+# CONFIG_CFI_CLANG is not set
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 CONFIG_ROP_PROTECTION_NONE=y
 # CONFIG_SHADOW_CALL_STACK is not set
